--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="img/bg-img1.jpg" class="d-block w-100" alt="" />
+          <img src="bg-img1.jpg" class="d-block w-100" alt="" />
           <div class="carousel-caption d-none d-md-block img1-content">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="img/bg-img2.jpg" class="d-block w-100" alt="" />
+          <img src="bg-img2.jpg" class="d-block w-100" alt="" />
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/bg-img3.jpg" class="d-block w-100" alt="" />
+          <img src="bg-img3.jpg" class="d-block w-100" alt="" />
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
